Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5062

traffic_ctl doesn't correctly detect plugin source for configuration variable.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 7.1.0
    • Management API

    Description

      If a plugin adds configuration variables via something like `TSMgmtStringCreate` these are marked as "explicit" rather than plugin provided defaults, which means the administrator can't tell if the values are from the plugin or his configuration. This should be improved to be parallel to core configuration values where these case are distinguishable.

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              amc Alan M. Carroll
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h
                  3h