TS-5062: Fix traffic_ctl to track plugin supplied configuration variables.